# elite_test

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md
cmake/: AddExecVsm.cmake  AddExecVxp.cmake  AddMreExec.cmake  AddPackVsm.cmake  AddPackVxp.cmake  MreUtils.cmake  toolchain-arm-none-eabi.cmake
common/: dll.def  gccmain.c
docs/: index.html
main/: CMakeLists.txt  dashcenter.h  dashleft.h  dashright.h  flight.c  flight.h  generation.c  input.c  input.h  main.c  market.c  market.h  platform.c  platform.h  ship.c  ship.h  stardust.c  stationsoi.h  upgrades.c  upgrades.h  variables.h  xorgfx.c  xorgfx.h
mreapi/: CMakeLists.txt
resources/: CMakeLists.txt
